--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,23 @@
 body{
     color: black;
     text-align: left;
-    font-family: 'Arial';
+    font-family: Arial;
 }
+
+.cabecera{
+    background: #33a;
+    box-shadow: 0px 2px 50px 0px rgba(0,0,0,0.5);
+    color: white;
+    font-weight: bold;
+    margin: 0;
+    padding: 0.5cm; 
+ }
+
+ .cabecera .tagible{
+     padding: 0 0 0 0.3cm;
+     font-weight: normal;
+     font-size: 0.3cm;
+ }
 
 .containar{
     width: 70%;
@@ -10,4 +25,10 @@ body{
     text-align: left;
     border: 1px solid black;
     margin: 0 auto;
+}
+
+
+
+.containar h1{
+    font-size: 20px;
 }
