--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@ body{
     font-family: Arial;
 }
 
-.cabecera{
+.cabe{
     background: #33a;
     box-shadow: 0px 2px 50px 0px rgba(0,0,0,0.5);
     color: white;
@@ -13,7 +13,7 @@ body{
     padding: 0.5cm; 
  }
 
- .cabecera .tagible{
+ .cabe .tagible{
      padding: 0 0 0 0.3cm;
      font-weight: normal;
      font-size: 0.3cm;
