--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,11 @@
 body{
     color: black;
     text-align: left;
-    font-family: Georgia;
+    font-family: Arial;
 }
 
 .cabe{
-    background: #33a;
+    background:black;
     box-shadow: 0px 2px 50px 0px rgba(0,0,0,0.5);
     color: white;
     font-weight: bold;
