--- a/css/style.css
+++ b/css/style.css
@@ -32,3 +32,10 @@ body{
 .containar h1{
     font-size: 20px;
 }
+
+.footer{
+	background: black;
+	color: white;
+	text-align: center;
+	padding: 0.5cm;
+}
